arr/prowlarr/prowlarr-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
  namespace: arr
spec:
  serviceName: prowlarr
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: linuxserver/prowlarr:latest
          ports:
            - containerPort: 8989
          volumeMounts:
            - mountPath: /config
              name: config
          securityContext:
            runAsUser: 1004
            runAsGroup: 100
      volumes:
        - name: config
          nfs:
            path: /export/Kubernetes/arr/prowlarr
            server: 192.168.86.107
