arr/prowlarr/prowlarr-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: arr
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/part-of: arr
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.flexflix.top`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
      middlewares:
        - name: local-network
          namespace: traefik
        - name: authentik
          namespace: authentik
